--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://stepbysheva.github.io",
+  "homepage": "https://stepbysheva.github.io/shevchuki",
   "name": "shevchuki",
   "version": "0.1.0",
   "private": true,
